# oh-my-coder

./: - **修复建议**:  .coverage.VOBCMacBook-Pro.local.5521.XEvVWxpx  .coverage.VOBCMacBook-Pro.local.5522.XdTuyUEx  .coverage.VOBCMacBook-Pro.local.5523.XtOywDvx  .coverage.VOBCMacBook-Pro.local.5524.XOxyxijx  .coverage.VOBCMacBook-Pro.local.5526.XjKXoCvx  .coverage.VOBCMacBook-Pro.local.5527.XQXJWHEx  .coverage.VOBCMacBook-Pro.local.5528.XeKWRyHx  .coverage.VOBCMacBook-Pro.local.9339.XsEQJvXx  .coverage.VOBCMacBook-Pro.local.9341.XZthlXpx  .coverage.VOBCMacBook-Pro.local.9342.XipcUddx  .coverage.VOBCMacBook-Pro.local.9343.XlmrwBax  .coverage.VOBCMacBook-Pro.local.9344.XNJTWnMx  .coverage.VOBCMacBook-Pro.local.9345.XkqErrAx  .coverage.VOBCMacBook-Pro.local.9346.XZHhqQqx  .coveragerc  .env.example  .gitignore  .lychee.toml  .lycheeignore  .secrets.baseline  404.html  AGENTS.md  AGENTS_CHECKLIST.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FUNDING.yml  HEARTBEAT.md  IDENTITY.md  IMPROVEMENT_PLAN.md  LICENSE  MEMORY.md  README.md  REPO_WIKI.md  SECURITY.md  SECURITY_CODING_GUIDE.md  SOUL.md  TASK.md  (+19 more)
.githooks/: pre-commit  pre-commit-security.sh
.github/: FUNDING.md  PULL_REQUEST_TEMPLATE.md
.learnings/: PROGRESS.md
.openclaw/: workspace-state.json
API/: index.html
CODE_REVIEW/: index.html
FAQ/: index.html
api/: api-reference.json
artifacts/: memory-cleanup-2026-05-06.md
backend/: main.py
blog/: omc-tutorial-3-ways-to-start.md
community/: README.md  index.html
config/: code-review.yaml  quick-review.yaml  security-review.yaml
demo-script-v0.2.0/: index.html
desktop/: README.md  index.html  package-lock.json  package.json  start.js  vite.config.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  types.rs
docs/: API.md  ARCHITECTURE.md  COMPARISON.md  DEMO-SCRIPT.md  DEMO_SCRIPT.md  FAQ.md  MEMORY_SYSTEM.md  MODELS.md  ORIGINAL_ARCHITECTURE.md  QUEST_MODE.md  QUICKSTART.md  SELF_IMPROVING.md  STARTER.md  WINDOWS_INSTALL.md  demo-video-script.md  index.md  research-desktop-ui-competitors.md
examples/: advanced_demo.py  advanced_usage.py  basic_usage.py  cli_demo.py  example_cicd.py  example_cli.py  example_config.py  example_django.py  example_fastapi.py  promotion.md  web_demo.py
health/: health_explore.json  notifications.jsonl  reassignment_091d53c1.json  reassignment_09292db9.json  reassignment_0d99448d.json  reassignment_20683cef.json  reassignment_2ab4182c.json  reassignment_46002d47.json  reassignment_56c91ca1.json  reassignment_70471d7b.json  reassignment_7d0bfe42.json  reassignment_8e71c66a.json  reassignment_8ffe7f76.json  reassignment_92460da8.json  reassignment_9cf5bde5.json  reassignment_cb309adf.json  reassignment_cef93217.json  reassignment_d952a1fb.json  reassignment_de5b318d.json  reassignment_e3cec24d.json  reassignment_f296f00c.json  reassignment_f3d0cde1.json  reassignment_f4474458.json  reassignment_f5d1ed1a.json
memory/: 2026-04-09.md
models/: baichuan-medium.yaml  deepseek-chat.yaml  deepseek-coder.yaml  doubao-high.yaml  doubao-low.yaml  doubao-medium.yaml  glm-4-flash.yaml  glm-4-plus.yaml  glm-4.yaml  hunyuan-medium.yaml  (+12 more)
projects/oh-my-coder/: .env  .env.example  CONTRIBUTING.md  README.md  demo.py  pyproject.toml  start-dev.sh  todo_demo.py
projects/oh-my-coder/.learnings/: PROGRESS.md
projects/oh-my-coder/examples/: advanced_demo.py  advanced_usage.py  example_cli.py  web_demo.py
projects/oh-my-coder/src/: __init__.py  cli.py
projects/oh-my-coder/src/agents/: __init__.py  analyst.py  auth_agent.py  base.py  code_reviewer.py  code_simplifier.py  cross_validation.py  data_agent.py  debugger.py  designer.py  devops.py  document.py  evolution.py  executor.py  explore.py  git_master.py  migration.py  performance.py  planner.py  security.py  smart_test.py  test_engineer.py  tracer.py  uml.py  verifier.py  vision.py  writer.py
projects/oh-my-coder/src/api/: openapi.py
projects/oh-my-coder/src/capabilities/: __init__.py
projects/oh-my-coder/src/capsule/: __init__.py  registry.py
projects/oh-my-coder/src/commands/: cli_model.py
projects/oh-my-coder/src/context/: browser_context.py
projects/oh-my-coder/src/core/: local_model_discovery.py  ollama_health.py  orchestrator.py  router.py
projects/oh-my-coder/src/gateway/: __init__.py
projects/oh-my-coder/src/mcp/: __init__.py  resources.py  tools.py
projects/oh-my-coder/src/memory/: __init__.py  skill_manager.py
projects/oh-my-coder/src/models/: baichuan.py  base.py  doubao.py  kimi.py  tongyi.py
projects/oh-my-coder/src/multiagent/: __init__.py  coordinator.py
projects/oh-my-coder/src/quest/: executor.py  manager.py
projects/oh-my-coder/src/rag/: indexer.py  search.py
projects/oh-my-coder/src/sandbox/: sandbox.py
projects/oh-my-coder/src/security/: permissions.py
projects/oh-my-coder/src/skills/: __init__.py  registry.py
projects/oh-my-coder/src/state/: task_state.py
projects/oh-my-coder/src/team/: __init__.py  statistics.py
projects/oh-my-coder/src/templates/: __init__.py
projects/oh-my-coder/src/tools/: sourcegraph.py
projects/oh-my-coder/src/utils/: __init__.py
projects/oh-my-coder/src/web/: dashboard_api.py  history_api.py  local_models_api.py  share_api.py  team_api.py
projects/oh-my-coder/src/web/templates/: dashboard.html  index.html
projects/oh-my-coder/src/wiki/: __init__.py  parser.py
projects/oh-my-coder/tests/: __init__.py  test_basic.py
(+735 files in other folders)
